Modified master file name. SOme formatting updates.

--- a/src/0-Preamble/dedicationFile.tex
+++ b/src/0-Preamble/dedicationFile.tex
@@ -2,5 +2,5 @@ I would like to dedicate this to my wife, Lauren, my parents, Robin and Erik, an
 
 %%% Local Variables:
 %%% mode: latex
-%%% TeX-master: "../../Jensen-Lit-Review"
+%%% TeX-master: "../../Andrew_Jensen_Dissertation"
 %%% End:
