--- a/src/1-Intro/1-1_computer-vision-primer/geometric-transformations.tex
+++ b/src/1-Intro/1-1_computer-vision-primer/geometric-transformations.tex
@@ -212,5 +212,5 @@ The perspective projection is the cornerstone of model-image registration. If a 
 
 %%% Local Variables:
 %%% mode: latex
-%%% TeX-master: "../../../Jensen-Lit-Review.tex"
+%%% TeX-master: "../../../Andrew_Jensen_Dissertation.tex"
 %%% End:
