--- a/src/1-Intro/1-1_computer-vision-primer/image-formation-and-cameras.tex
+++ b/src/1-Intro/1-1_computer-vision-primer/image-formation-and-cameras.tex
@@ -72,5 +72,5 @@ At this point, we have placed an object in front of a camera using 3D transforma
 
 %%% Local Variables:
 %%% mode: latex
-%%% TeX-master: "../../../Jensen-Lit-Review"
+%%% TeX-master: "../../../Andrew_Jensen_Dissertation"
 %%% End:
