--- a/src/1-Intro/1-1_computer-vision-primer/image-similarity-metrics.tex
+++ b/src/1-Intro/1-1_computer-vision-primer/image-similarity-metrics.tex
@@ -62,5 +62,5 @@ While they can be much more informative and specific, the main drawback of featu
 
 %%% Local Variables:
 %%% mode: latex
-%%% TeX-master: "../../../Jensen-Lit-Review"
+%%% TeX-master: "../../../Andrew_Jensen_Dissertation"
 %%% End:
