--- a/src/1-Intro/1-2_machine-learning/neural-network-structure.tex
+++ b/src/1-Intro/1-2_machine-learning/neural-network-structure.tex
@@ -98,5 +98,5 @@ A convolutional neural network can have an additional fully connected network ap
 
 %%% Local Variables:
 %%% mode: latex
-%%% TeX-master: "../../../Jensen-Lit-Review"
+%%% TeX-master: "../../../Andrew_Jensen_Dissertation"
 %%% End:
