--- a/src/1-Intro/1-2_machine-learning/nn-telos.tex
+++ b/src/1-Intro/1-2_machine-learning/nn-telos.tex
@@ -13,5 +13,5 @@ Using neural networks for image processing is an attempt to re-create the visual
 
 %%% Local Variables:
 %%% mode: latex
-%%% TeX-master: "../../../Jensen-Lit-Review"
+%%% TeX-master: "../../../Andrew_Jensen_Dissertation"
 %%% End:
