--- a/src/1-Intro/1-2_machine-learning/training-neural-networks.tex
+++ b/src/1-Intro/1-2_machine-learning/training-neural-networks.tex
@@ -30,5 +30,5 @@ One of the main limitations of gradient descent and backpropagation is the need 
 
 %%% Local Variables:
 %%% mode: latex
-%%% TeX-master: "../../../Jensen-Lit-Review"
+%%% TeX-master: "../../../Andrew_Jensen_Dissertation"
 %%% End:
