--- a/src/1-Intro/1-3_model-image-registration/1-3_model-image-registration.tex
+++ b/src/1-Intro/1-3_model-image-registration/1-3_model-image-registration.tex
@@ -48,5 +48,5 @@ Roentgen Stereophotogrammetry is one of the most accurate methods of measuring i
 The largest limitation of this method is two-fold (1) the need for additional surgical steps precludes this from being a widely applied method, and (2) the need for biplane imaging system poses a problem to availability and portability.
 %%% Local Variables:
 %%% mode: latex
-%%% TeX-master: "../../../Jensen-Lit-Review"
+%%% TeX-master: "../../../Andrew_Jensen_Dissertation"
 %%% End:
