--- a/src/1-Intro/1-4_autonomous-kinematics-measurements/objective-function.tex
+++ b/src/1-Intro/1-4_autonomous-kinematics-measurements/objective-function.tex
@@ -11,5 +11,5 @@ Unfortunately, the contours of the projected model are extremely sensitive to po
 
 %%% Local Variables:
 %%% mode: latex
-%%% TeX-master: "../../../Jensen-Lit-Review"
+%%% TeX-master: "../../../Andrew_Jensen_Dissertation"
 %%% End:
