--- a/src/1-Intro/1-4_autonomous-kinematics-measurements/optimization-routine.tex
+++ b/src/1-Intro/1-4_autonomous-kinematics-measurements/optimization-routine.tex
@@ -80,5 +80,5 @@ For our purposes, we construct a hypercube along each of the 6 degrees-of-freedo
 
 %%% Local Variables:
 %%% mode: latex
-%%% TeX-master: "../../../Jensen-Lit-Review"
+%%% TeX-master: "../../../Andrew_Jensen_Dissertation"
 %%% End:
