--- a/src/1-Intro/1-4_autonomous-kinematics-measurements/pose-estimation.tex
+++ b/src/1-Intro/1-4_autonomous-kinematics-measurements/pose-estimation.tex
@@ -131,5 +131,5 @@ Once this step is complete, we have accounted for $x$ and $y$ rotations (\cref{e
 
 %%% Local Variables:
 %%% mode: latex
-%%% TeX-master: "../../../Jensen-Lit-Review"
+%%% TeX-master: "../../../Andrew_Jensen_Dissertation"
 %%% End:
