--- a/src/1-Intro/1-4_autonomous-kinematics-measurements/single-plane-limitations.tex
+++ b/src/1-Intro/1-4_autonomous-kinematics-measurements/single-plane-limitations.tex
@@ -3,5 +3,5 @@ Despite a fully autonomous solution for measuring total knee arthroplasty kinema
 So far, incorporating digital ligaments into the cost function has been used to a great deal of success.
 %%% Local Variables:
 %%% mode: latex
-%%% TeX-master: "../../../Jensen-Lit-Review"
+%%% TeX-master: "../../../Andrew_Jensen_Dissertation"
 %%% End:
