--- a/src/1-Intro/ch1-lit_review.tex
+++ b/src/1-Intro/ch1-lit_review.tex
@@ -45,7 +45,7 @@ Lastly, \cref{sec:aims} discusses the aims of this thesis, beginning with a vali
 \input{src/1-Intro/1-4_autonomous-kinematics-measurements/1-4_autonomous-kinematics-measurements.tex}
 %%% Local Variables:
 %%% mode: latex
-%%% TeX-master: "../../Jensen-Lit-Review"
+%%% TeX-master: "../../Andrew_Jensen_Dissertation"
 %%% End:
 
 % LocalWords:  arthroplasty
