--- a/src/2-aims/aim1.tex
+++ b/src/2-aims/aim1.tex
@@ -2,5 +2,5 @@ The primary aim of this dissertation is to test the feasibility of the fully aut
 
 %%% Local Variables:
 %%% mode: latex
-%%% TeX-master: "../../Jensen-Lit-Review"
+%%% TeX-master: "../../Andrew_Jensen_Dissertation"
 %%% End:
