--- a/src/2-aims/aim2.tex
+++ b/src/2-aims/aim2.tex
@@ -17,7 +17,10 @@ One of the more pernicious limitations in single-plane fluoroscopy is an issue t
 
 This aim focuses on establishing a post-processing pipeline that can be used to address symmetry traps fully autonomously, solving an issue facing researchers studying single-plane kinematics for nearly 30 years! We also propose imaging recommendations to reduce the occurrence of symmetry traps in clinical data.
 
+The work presented in this aim is currently under review for publication in the Journal of Biomechanics. This is some extra test text
+
+
 %%% Local Variables:
 %%% mode: latex
-%%% TeX-master: "../../Jensen-Lit-Review"
+%%% TeX-master: "../../Andrew_Jensen_Dissertation"
 %%% End:
