--- a/src/2-aims/aim3.tex
+++ b/src/2-aims/aim3.tex
@@ -7,5 +7,5 @@ Ultimately, the hope is that there can be a standard operating procedure for mea
 
 %%% Local Variables:
 %%% mode: latex
-%%% TeX-master: "../../Jensen-Lit-Review"
+%%% TeX-master: "../../Andrew_Jensen_Dissertation"
 %%% End:
