--- a/src/2-aims/aim4.tex
+++ b/src/2-aims/aim4.tex
@@ -1,2 +1,9 @@
 The final aim outlines the process of applying the autonomous kinematics measurement platform to total shoulder arthroplasty (TSA) implants.
 Major shortcomings are discussed, as well as multiple avenues forward that bring analysis down to geometric first principles.
+
+The final section of this aim is under preparation for submission to publication.
+
+%%% Local Variables:
+%%% mode: latex
+%%% TeX-master: "../../Andrew_Jensen_Dissertation"
+%%% End:
