--- a/src/JTML/chX-jtml.tex
+++ b/src/JTML/chX-jtml.tex
@@ -1,7 +1,12 @@
 \chapter{Joint Track Machine Learning: An Autonomous Method of Measuring 6-DOF TKA Kinematics from Single-Plane Fluoroscopic Images}
 \label{sec:jtml}
 \section{Introduction}
-Total Knee Arthroplasty (TKA) is a standard procedure for alleviating symptoms related to osteoarthritis in the knee. In 2018, orthopaedic surgeons performed more than 715,000 TKA operations in the United States \cite{agencyforhealthcareresearchandqualityHCUPFastStats}. This number is projected to increase to 3.48 million by 2030 \cite{kurtzProjectionsPrimaryRevision2007} due to an aging population and increased obesity rates. While TKA largely relieves symptomatic osteoarthritis, roughly 20\% of TKA patients express postoperative dissatisfaction, citing mechanical limitations, pain, and instability as the leading causes \cite{bakerRolePainFunction2007,bournePatientSatisfactionTotal2010,scottPredictingDissatisfactionFollowing2010}. Standard methods of musculoskeletal diagnosis cannot quantify the dynamic state of the joint, either pre- or post-operatively; clinicians must rely on static imaging (radiography, MRI, CT) or qualitative mechanical tests to determine the condition of the affected joint, and these tests cannot easily be performed during weight-bearing or dynamic movement when most pain symptoms occur. Unfortunately, most of the tools used to quantify 3D dynamic motion are substantially affected by soft-tissue artifacts \cite{gaoInvestigationSoftTissue2008,stagniQuantificationSoftTissue2005,linEffectsSoftTissue2016}, are prohibitively time-consuming or expensive \cite{daemsValidationThreedimensionalTotal2016}, or cannot be performed with equipment available at most hospitals.
+Total Knee Arthroplasty (TKA) is a standard procedure for alleviating symptoms related to osteoarthritis in the knee.
+In 2018, orthopaedic surgeons performed more than 715,000 TKA operations in the United States \cite{agencyforhealthcareresearchandqualityHCUPFastStats}.
+This number is projected to increase to 3.48 million by 2030 \cite{kurtzProjectionsPrimaryRevision2007} due to an aging population and increased obesity rates.
+While TKA largely relieves symptomatic osteoarthritis, roughly 20\% of TKA patients express postoperative dissatisfaction, citing mechanical limitations, pain, and instability as the leading causes \cite{bakerRolePainFunction2007,bournePatientSatisfactionTotal2010,scottPredictingDissatisfactionFollowing2010}.
+Standard methods of musculoskeletal diagnosis cannot quantify the dynamic state of the joint, either pre- or post-operatively; clinicians must rely on static imaging (radiography, MRI, CT) or qualitative mechanical tests to determine the condition of the affected joint, and these tests cannot easily be performed during weight-bearing or dynamic movement when most pain symptoms occur.
+Unfortunately, most of the tools used to quantify 3D dynamic motion are substantially affected by soft-tissue artifacts \cite{gaoInvestigationSoftTissue2008,stagniQuantificationSoftTissue2005,linEffectsSoftTissue2016}, are prohibitively time-consuming or expensive \cite{daemsValidationThreedimensionalTotal2016}, or cannot be performed with equipment available at most hospitals.
 
 Model-image registration is a process where a 3D model is aligned to match an object’s projection in an image \cite{brownSurveyImageRegistration1992}.
 Researchers have performed model-image registration using single-plane fluoroscopic or flat-panel imaging since the 1990s.
@@ -12,11 +17,16 @@ One of the main benefits of this single-plane approach is that suitable images c
 The main impediment to implementing this approach into a standard clinical workflow is the time and expense of human operators to supervise the model-image registration process. These methods require either (1) an initial pose estimate \cite{floodAutomatedRegistration3D2018,loweFittingParameterizedThreedimensional1991}, (2) a pre-segmented contour of the implant in the image \cite{brownSurveyImageRegistration1992,lavalleeRecoveringPositionOrientation1995}, or (3) a human operator to assist the optimization routine out of local minima \cite{mahfouzRobustMethodRegistration2003}. Each of these requirements makes model-image registration methods impractical for clinical use.
 Even state-of-the-art model-image registration techniques \cite{floodAutomatedRegistration3D2018} require human initialization or segmentation to perform adequately.
 
-Machine learning algorithms automate the process of analytical model building, utilizing specific algorithms to fit a series of inputs to their respective outputs. Neural networks are a subset of machine learning algorithms that utilize artificial neurons inspired by the human brain’s connections \cite{marrEarlyProcessingVisual1976}. These networks have shown a great deal of success in many computer vision tasks, such as segmentation \cite{chanHistoSegNetSemanticSegmentation2019,wangDeepHighResolutionRepresentation2020,ronnebergerUNetConvolutionalNetworks2015}, pose estimation \cite{wuDeepGraphPose2020,kendallGeometricLossFunctions2017}, and classification \cite{krizhevskyImageNetClassificationDeep2017,qiPointNetDeepHierarchical2017,qiPointNetDeepLearning2017}. These capabilities might remove the need for human supervision from TKA model-image registration. Therefore, we propose a three-stage data analysis pipeline (Fig. \ref{fig:pipeline}) where a convolutional neural network (CNN) is used to segment, or identify, the pixels belonging to either a femoral or tibial component. Then, an initial pose estimate is generated comparing the segmented implant contour to a pre-computed shape library. Lastly, the initial pose estimate serves as the starting point for a Lipschitzian optimizer that aligns the contours of a 3D implant model to the contour of the CNN-segmented image.
+Machine learning algorithms automate the process of analytical model building, utilizing specific algorithms to fit a series of inputs to their respective outputs.
+Neural networks are a subset of machine learning algorithms that utilize artificial neurons inspired by the human brain’s connections \cite{marrEarlyProcessingVisual1976}. These networks have shown a great deal of success in many computer vision tasks, such as segmentation \cite{chanHistoSegNetSemanticSegmentation2019,wangDeepHighResolutionRepresentation2020,ronnebergerUNetConvolutionalNetworks2015}, pose estimation \cite{wuDeepGraphPose2020,kendallGeometricLossFunctions2017}, and classification \cite{krizhevskyImageNetClassificationDeep2017,qiPointNetDeepHierarchical2017,qiPointNetDeepLearning2017}.
+These capabilities might remove the need for human supervision from TKA model-image registration.
+Therefore, we propose a three-stage data analysis pipeline (Fig. \ref{fig:pipeline}) where a convolutional neural network (CNN) is used to segment, or identify, the pixels belonging to either a femoral or tibial component.
+Then, an initial pose estimate is generated comparing the segmented implant contour to a pre-computed shape library.
+Lastly, the initial pose estimate serves as the starting point for a Lipschitzian optimizer that aligns the contours of a 3D implant model to the contour of the CNN-segmented image.
 
 \begin{figure*}[ht]
     \centering
-    \includegraphics[width = \textwidth]{figs/jtml-paper/fig1-flowchart.png}
+    \includegraphics[width = \textwidth]{~/figures/raster/jtml-pipeline.png}
     \caption{An overview of the pipeline for autonomous measurements of total knee arthroplasty kinematics. First, the data is processed through a convolutional neural network to locate the pixels belonging to the femoral and tibial implants \cite{wangDeepHighResolutionRepresentation2020}, then, Normalized Fourier Descriptor shape libraries are used to determine and initial pose estimate \cite{banksAccurateMeasurementThreedimensional1996}, and lastly, DIRECT-JTA \cite{floodAutomatedRegistration3D2018} is run on those segmented images using the NFD estimates as initializations for pose.}
     \label{fig:pipeline}
 \end{figure*}
@@ -25,7 +35,8 @@ This paper seeks to answer the following three questions: (1) How well does a co
 
 \section{Methods}
 
-Data from seven previously reported TKA kinematics studies were used for this study \cite{kefalaAssessmentKneeKinematics2017,palm-vlasakMinimalVariationTop2022,okamotoVivoKneeKinematics2011,watanabeKneeKinematicsAnterior2013,jennyREGISTRATIONKNEEKINEMATICS2015,watanabeInvivoKinematicsHighflex2016,scottCanTotalKnee2016}. These studies utilized single-plane fluoroscopy or flat-panel imaging to measure tibiofemoral implant kinematics during lunge, squat, kneel, and stair climbing movements from 8248 images in 71 patients with implants from 7 manufacturers, including 36 distinct implants. From each of these studies, the following information was collected: (1) deidentified radiographic images, (2) x-ray calibration files, (3) manufacturer-supplied tibial and femoral implant surface geometry files (STL format), and (4) human supervised kinematics for the tibial and femoral components in each of the images. CNNs were trained with images from six of the studies using a transfer-learning paradigm with an open-source network \cite{wangDeepHighResolutionRepresentation2020}. CNN performance was tested using two image collections: a standard test set including images from the six studies used for training and a wholly naïve test set using images from the seventh study, where the imaging equipment and implants were different from anything used in training (Fig. \ref{fig:dataset}). We used both test image sets to compare human-supervised kinematics with autonomously measured kinematics. Separately, two independent groups utilized our software to assess the accuracy of TKA kinematics measurements compared to their previously reported reference standard systems using RSA \cite{teeterQuantificationVivoImplant2013} or motion capture \cite{daemsValidationThreedimensionalTotal2016}.
+Data from seven previously reported TKA kinematics studies were used for this study \cite{kefalaAssessmentKneeKinematics2017,palm-vlasakMinimalVariationTop2022,okamotoVivoKneeKinematics2011,watanabeKneeKinematicsAnterior2013,jennyREGISTRATIONKNEEKINEMATICS2015,watanabeInvivoKinematicsHighflex2016,scottCanTotalKnee2016}.
+These studies utilized single-plane fluoroscopy or flat-panel imaging to measure tibiofemoral implant kinematics during lunge, squat, kneel, and stair climbing movements from 8248 images in 71 patients with implants from 7 manufacturers, including 36 distinct implants. From each of these studies, the following information was collected: (1) deidentified radiographic images, (2) x-ray calibration files, (3) manufacturer-supplied tibial and femoral implant surface geometry files (STL format), and (4) human supervised kinematics for the tibial and femoral components in each of the images. CNNs were trained with images from six of the studies using a transfer-learning paradigm with an open-source network \cite{wangDeepHighResolutionRepresentation2020}. CNN performance was tested using two image collections: a standard test set including images from the six studies used for training and a wholly naïve test set using images from the seventh study, where the imaging equipment and implants were different from anything used in training (Fig. \ref{fig:dataset}). We used both test image sets to compare human-supervised kinematics with autonomously measured kinematics. Separately, two independent groups utilized our software to assess the accuracy of TKA kinematics measurements compared to their previously reported reference standard systems using RSA \cite{teeterQuantificationVivoImplant2013} or motion capture \cite{daemsValidationThreedimensionalTotal2016}.
 
 \begin{figure}[h]
     \centering
@@ -117,3 +128,8 @@ Two independent research teams utilized our software to evaluate the accuracy of
 This work has several limitations. First, the image data sets resulted from previous studies in our labs, so there was no prospective design of which implant systems and image detectors should be included for a pipeline that generalizes well to other implants and detectors. Nevertheless, the naïve data set and the independent assessments, all involving implants and detectors not used for training, performed well and suggest that the method can usefully generalize to measurements of traditionally configured TKA implants. Future work is required to evaluate measurement performance with partial knee arthroplasty or revision implants. Second, many methodologic and configuration options and alternatives remain to be explored, and the current pipeline implementation should not be considered optimal. How best to disambiguate tibial poses and determine the most effective and robust optimization cost functions are areas of current effort.
 
 We present an autonomous pipeline for measuring 3D TKA kinematics from single-plane radiographic images. Measurement reproducibility and accuracy are comparable to contemporary human-supervised methods. We believe capabilities like this will soon make it practical to perform dynamic TKA kinematic analysis in a clinical workflow, where these measures can help surgeons objectively determine the best course of treatment for their patients.
+
+%%% Local Variables:
+%%% mode: latex
+%%% TeX-master: "../../Andrew_Jensen_Dissertation"
+%%% End:
