--- a/src/SymTrap/sym_trap_paper.tex
+++ b/src/SymTrap/sym_trap_paper.tex
@@ -215,5 +215,5 @@ We believe that this method, along with recent advancements in autonomous kinema
 
 %%% Local Variables:
 %%% mode: latex
-%%% TeX-master: "../../Jensen-Lit-Review"
+%%% TeX-master: "../../Andrew_Jensen_Dissertation"
 %%% End:
