--- a/src/aim3/aim3.tex
+++ b/src/aim3/aim3.tex
@@ -35,5 +35,5 @@ And so, the following chapter will contain some background information toward so
 
 %%% Local Variables:
 %%% mode: latex
-%%% TeX-master: "../../Jensen-Lit-Review"
+%%% TeX-master: "../../Andrew_Jensen_Dissertation"
 %%% End:
