--- a/src/aim3/latent-kinematics-space.tex
+++ b/src/aim3/latent-kinematics-space.tex
@@ -74,5 +74,5 @@ However, with widespread adoption of the proposed Joint Track Machine Learning (
 
 %%% Local Variables:
 %%% mode: latex
-%%% TeX-master: "../../Jensen-Lit-Review"
+%%% TeX-master: "../../Andrew_Jensen_Dissertation"
 %%% End:
