--- a/src/aim3/synthetic-data.tex
+++ b/src/aim3/synthetic-data.tex
@@ -9,5 +9,5 @@ With the spread of anonymized health datasets, a kinematics dataset containing t
 
 %%% Local Variables:
 %%% mode: latex
-%%% TeX-master: "../../Jensen-Lit-Review"
+%%% TeX-master: "../../Andrew_Jensen_Dissertation"
 %%% End:
