--- a/src/aim4-shape-sensitivity/jtml-on-tsa.tex
+++ b/src/aim4-shape-sensitivity/jtml-on-tsa.tex
@@ -3,5 +3,5 @@ JTML on TSA
 
 %%% Local Variables:
 %%% mode: latex
-%%% TeX-master: "../../Jensen-Lit-Review"
+%%% TeX-master: "../../Andrew_Jensen_Dissertation"
 %%% End:
