--- a/src/0-Preamble/abbreviations.tex
+++ b/src/0-Preamble/abbreviations.tex
@@ -18,5 +18,5 @@ HRNet & High Resolution Convolutional Neural Network \cite{wangDeepHighResolutio
 
 %%% Local Variables:
 %%% mode: latex
-%%% TeX-master: "../../Jensen-Lit-Review"
+%%% TeX-master: "../../Andrew_Jensen_Dissertation"
 %%% End:
