--- a/src/1-Intro/1-1_computer-vision-primer/image-processing.tex
+++ b/src/1-Intro/1-1_computer-vision-primer/image-processing.tex
@@ -161,5 +161,5 @@ Where $\theta$ represents a thresholding function.
 
 %%% Local Variables:
 %%% mode: latex
-%%% TeX-master: "../../../Jensen-Lit-Review"
+%%% TeX-master: "../../../Andrew_Jensen_Dissertation"
 %%% End:
