--- a/src/1-Intro/1-2_machine-learning/1-2_ml.tex
+++ b/src/1-Intro/1-2_machine-learning/1-2_ml.tex
@@ -6,5 +6,5 @@ One of the biggest limitations in historic forms of image processing and filteri
 
 %%% Local Variables:
 %%% mode: latex
-%%% TeX-master: "../../../Jensen-Lit-Review"
+%%% TeX-master: "../../../Andrew_Jensen_Dissertation"
 %%% End:
