--- a/src/2-aims/2-aims.tex
+++ b/src/2-aims/2-aims.tex
@@ -21,5 +21,5 @@
 
 %%% Local Variables:
 %%% mode: latex
-%%% TeX-master: "../../Jensen-Lit-Review"
+%%% TeX-master: "../../Andrew_Jensen_Dissertation"
 %%% End:
