--- a/src/aim4-shape-sensitivity/aim4.tex
+++ b/src/aim4-shape-sensitivity/aim4.tex
@@ -24,5 +24,5 @@ Last, I will discuss a first-principles approach used to dive even deeper into d
 
 %%% Local Variables:
 %%% mode: latex
-%%% TeX-master: "../../Jensen-Lit-Review"
+%%% TeX-master: "../../Andrew_Jensen_Dissertation"
 %%% End:
