--- a/src/aim4-shape-sensitivity/shape-sensitivity.tex
+++ b/src/aim4-shape-sensitivity/shape-sensitivity.tex
@@ -1,5 +1,5 @@
 
 %%% Local Variables:
 %%% mode: latex
-%%% TeX-master: "../../Jensen-Lit-Review"
+%%% TeX-master: "../../Andrew_Jensen_Dissertation"
 %%% End:
