--- a/src/aim4-shape-sensitivity/aim4.tex
+++ b/src/aim4-shape-sensitivity/aim4.tex
@@ -1,4 +1,5 @@
- \chapter{This Will Definitely Work on Shoulder Implants, Right?}
+\chapter{This Will Definitely Work on Shoulder Implants, Right?\protect\footnotemark}
+\footnotetext{No}
 
 \section{Introduction}
 Another common arthroplasty (TSA) procedure is total shoulder replacement, which involves the removal and replacement of the distal end of the glenoid/scapula and the proximal end of the humeral head.
