Lots of work done in shape sensitivity section

--- a/src/aim4-shape-sensitivity/aim4.tex
+++ b/src/aim4-shape-sensitivity/aim4.tex
@@ -13,13 +13,16 @@ Unfortunately, applying the same pipeline to shoulder implants did not work.
 This dissertation chapter is divided into three sections.
 First, I will discuss the methods and results of applying our existing framework to the problem of measuring TSA implant kinematics, and explain some of the pitfalls.
 Second, I will dive into some of the modifications made to the model-image registration cost-function to try and overcome some of the TSA kinematics limitations.
-Last, I will discuss a first-principles approach used to dive even deeper into diagnosing the inherent kinematics measurement issues, and propose of methodological recommendations for others wishing to perform these measurements. This last chapter will be converted into a paper for hopeful publication.
+Last, I will discuss a geometric first-principles approach used to dive even deeper into diagnosing the inherent kinematics measurement issues, and propose of methodological recommendations for others wishing to perform these measurements.
+This last chapter will be converted into a paper for hopeful publication.
 
 \section{Joint Track Machine Learning on Total Shoulder Arthroplasty Implants}
 \input{src/aim4-shape-sensitivity/jtml-on-tsa}
 \section{Improving Model-Image Registration}
+\label{sec:new-image-metrics}
 \input{src/aim4-shape-sensitivity/new-metrics}
 \section{2D Shape Projection Sensitivity Analysis}
+\label{sec:shape-sensitivity}
 \input{src/aim4-shape-sensitivity/shape-sensitivity}
 
 
