--- a/src/myBib.bib
+++ b/src/myBib.bib
@@ -4236,6 +4236,23 @@
   file = {/home/ajensen123@ad.ufl.edu/references/docs/Hu et al-2021_Two-parameter Persistence for Images via Distance Transform/Hu et al. - 2021 - Two-parameter Persistence for Images via Distance .pdf}
 }
 
+@article{huVisualPatternRecognition1962,
+  title = {Visual Pattern Recognition by Moment Invariants},
+  author = {Hu, Ming-Kuei},
+  year = {1962},
+  month = feb,
+  journal = {IEEE Transactions on Information Theory},
+  volume = {8},
+  number = {2},
+  pages = {179--187},
+  issn = {0018-9448},
+  doi = {10.1109/TIT.1962.1057692},
+  urldate = {2023-11-29},
+  abstract = {In this paper a theory of two-dimensional moment invariants for planar geometric figures is presented. A fundamental theorem is established to relate such moment invariants to the wellknown algebraic invariants. Complete systems of moment invariants under translation, similitude and orthogonal transformations are derived. Some moment invariants under general two-dimensional linear transformations are also included. Both theoretical formulation and practical models of visual pattern recognition based upon these moment invariants are discussed. A simple simulation program together with its performance are also presented. It is shown that recognition of geometrical patterns and alphabetical characters independently of position, size and orientation can be accomplished. It is also indicated that generalization is possible to include invariance with parallel projection.},
+  langid = {english},
+  file = {/home/ajensen123@ad.ufl.edu/references/docs/Ming-Kuei Hu-1962_Visual pattern recognition by moment invariants/Ming-Kuei Hu - 1962 - Visual pattern recognition by moment invariants.pdf}
+}
+
 @article{idenFDAGrantsBreakthrough2020,
   title = {5 {{FDA Grants Breakthrough Designation}} for {{Agili-C}} {$>>$}},
   author = {Iden, {\relax AI}},
@@ -6712,23 +6729,6 @@
   annotation = {MAG ID: 2950577311}
 }
 
-@article{ming-kueihuVisualPatternRecognition1962,
-  title = {Visual Pattern Recognition by Moment Invariants},
-  author = {{Ming-Kuei Hu}},
-  year = {1962},
-  month = feb,
-  journal = {IEEE Transactions on Information Theory},
-  volume = {8},
-  number = {2},
-  pages = {179--187},
-  issn = {0018-9448},
-  doi = {10.1109/TIT.1962.1057692},
-  urldate = {2023-11-29},
-  abstract = {In this paper a theory of two-dimensional moment invariants for planar geometric figures is presented. A fundamental theorem is established to relate such moment invariants to the wellknown algebraic invariants. Complete systems of moment invariants under translation, similitude and orthogonal transformations are derived. Some moment invariants under general two-dimensional linear transformations are also included. Both theoretical formulation and practical models of visual pattern recognition based upon these moment invariants are discussed. A simple simulation program together with its performance are also presented. It is shown that recognition of geometrical patterns and alphabetical characters independently of position, size and orientation can be accomplished. It is also indicated that generalization is possible to include invariance with parallel projection.},
-  langid = {english},
-  file = {/home/ajensen123@ad.ufl.edu/references/docs/Ming-Kuei Hu-1962_Visual pattern recognition by moment invariants/Ming-Kuei Hu - 1962 - Visual pattern recognition by moment invariants.pdf}
-}
-
 @article{miznerEarlyQuadricepsStrength2005,
   title = {Early {{Quadriceps Strength Loss After Total Knee Arthroplasty}}},
   author = {Mizner, Ryan L and Petterson, Stephanie C and Stevens, Jennifer E and Vandenborne, Krista and {Snyder-Mackler}, Lynn},
@@ -7068,6 +7068,20 @@
   pages = {8},
   langid = {english},
   file = {/home/ajensen123@ad.ufl.edu/references/docs/-_The Next Wave of Hospital Innovation to Make Patients Safer/The Next Wave of Hospital Innovation to Make Patie.pdf}
+}
+
+@article{nickollsScalableParallelProgramming2008,
+  title = {Scalable {{Parallel Programming}} with {{CUDA}}},
+  author = {Nickolls, John and Buck, Ian and Garland, Michael and Skadron, Kevin},
+  year = {2008},
+  month = mar,
+  journal = {ACM Queue},
+  volume = {6},
+  number = {2},
+  pages = {40--53},
+  abstract = {The advent of multicore CPUs and manycore GPUs means that mainstream processor chips are now parallel systems. Furthermore, their parallelism continues to scale with Moore's law. The challenge is to develop mainstream application software that transparently scales its parallelism to leverage the increasing number of processor cores, much as 3D graphics applications transparently scale their parallelism to manycore GPUs with widely varying numbers of cores.},
+  langid = {english},
+  file = {/home/ajensen123@ad.ufl.edu/references/zotero/storage/HDM6CBGV/Scalable Parallel Programming with CUDA.pdf}
 }
 
 @article{nicolauTopologyBasedData2011,
